
- SimpleSwap can now be set an engine. If none is set, the old
  cash-flow-based calculation is used.

- Generalized McVanillaEngine so that it can manage n-dimensional processes;
  it now subsumes McHestonEngine.

- Added weight to short-rate model calibration (thanks to Enrico Michelotti.)

- Added pricing of Bermudan options on binomial trees (thanks to Enrico
  Michelotti.)

- Merged American and European option examples; added Bermudan option.

- Added Brazilian calendar (thanks to Piter Dias.)

- Separated accrual and payment conventions for bonds.

- Added Argentinian, Icelandic, Indonesian, Mexican, and Ukrainian calendars.

- Added convertible bonds (thanks to Theo Boafo.)

- Added Libor market model (thanks to Klaus Spanderen.)

- Added Levenberg-Marquardt optimization method (thanks to Klaus Spanderen.)
